<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.estudy.allan.quotations.Register"
    tools:showIn="@layout/activity_register">

    <EditText android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@color/colorLightYellow"
        android:padding="8dp"
        android:textSize="25sp"
        android:textColor="@color/colorGrayText"
        android:text="@string/userName"/>
    <EditText android:id="@+id/etUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUserName"
        android:layout_marginTop="16dp"
        android:background="@color/colorLightYellow"
        android:padding="8dp"
        android:textSize="25sp"
        android:textColor="@color/colorGrayText"
        android:text="@string/userEmail"/>
    <EditText android:id="@+id/etUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUserEmail"
        android:layout_marginTop="16dp"
        android:background="@color/colorLightYellow"
        android:padding="8dp"
        android:textSize="25sp"
        android:textColor="@color/colorGrayText"
        android:text="@string/password"/>
    <Button android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUserPassword"
        android:layout_marginTop="30dp"
        android:background="@color/colorGreen"
        android:textSize="25dp"
        android:fontFamily="monospace"
        android:text="@string/userRegister"/>
    <Button android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:layout_marginTop="30dp"
        android:background="@color/colorRed"
        android:textSize="25dp"
        android:fontFamily="monospace"
        android:text="@string/cancel"/>

</RelativeLayout>
