<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.estudy.allan.quotations.QuotationItem"
    tools:showIn="@layout/activity_quotation_item">

    <TextView android:id="@+id/tvItemId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"/>
    <TextView android:id="@+id/tvItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvItemId"
        android:background="@color/colorAccent"
        android:textSize="35sp"
        android:textColor="@color/colorWhite"/>
    <LinearLayout android:id="@+id/llSymbol"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tvItemName">
        <TextView android:id="@+id/tvItemSymbol"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:textSize="23sp"/>
        <TextView android:id="@+id/tvItemRank"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textSize="23sp"/>
    </LinearLayout>
    <View android:id="@+id/vSeparator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/llSymbol"
        android:background="@color/colorAccent"/>

    <LinearLayout android:id="@+id/llPrices"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/vSeparator1">
        <LinearLayout android:id="@+id/llPriceUSD"
            android:orientation="vertical"
            android:layout_width="175dp"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/tvItemPriceUSDtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:text="@string/usdPrice"/>
            <TextView android:id="@+id/tvItemPriceUSD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/llPriceBTC"
            android:orientation="vertical"
            android:layout_width="175dp"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/tvItemPriceBTCtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:text="@string/btcPrice"/>
            <TextView android:id="@+id/tvItemPriceBTC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <TextView android:id="@+id/tvVolumeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llPrices"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:text="@string/volume"/>
    <TextView android:id="@+id/tvVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvVolumeText"
        android:layout_marginTop="8dp"
        android:textSize="25sp"/>
    <TextView android:id="@+id/tvChangeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvVolume"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:text="@string/change"/>
    <TextView android:id="@+id/tvChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvChangeText"
        android:layout_marginTop="8dp"
        android:textSize="25sp"/>

    <RelativeLayout android:id="@+id/rlOthers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvChange"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorGray">
        <TextView android:id="@+id/tvItemMarketText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/marketCap"/>
        <TextView android:id="@+id/tvItemMarket"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvItemMarketText"
            android:textSize="18dp"/>
        <LinearLayout android:id="@+id/llAvailable"
            android:orientation="vertical"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvItemMarket">
            <TextView android:id="@+id/tvItemAvailableText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/available_supply"/>
            <TextView android:id="@+id/tvItemAvailable"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvItemMarketText"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/llTotal"
            android:orientation="vertical"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvItemMarket"
            android:layout_toRightOf="@id/llAvailable">
            <TextView android:id="@+id/tvItemTotalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/total_supply"/>
            <TextView android:id="@+id/tvItemTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/llPercent1h"
            android:orientation="vertical"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/llAvailable">
            <TextView android:id="@+id/tvItemPercent1hText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/percent1h"/>
            <TextView android:id="@+id/tvItemPercent1h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/llPercent7d"
            android:orientation="vertical"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/llTotal"
            android:layout_toRightOf="@id/llPercent1h">
            <TextView android:id="@+id/tvItemPercent7dText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/percent7d"/>
            <TextView android:id="@+id/tvItemPercent7d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/llLast"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llPercent1h">
            <TextView android:id="@+id/tvItemLastText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textSize="12dp"
                android:text="@string/last_update"/>
            <TextView android:id="@+id/tvItemLast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="12dp"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
